list index has beed added

--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,10 @@ nav a:hover {
 .article-list-item p {
   padding-bottom: 32px;
   border-bottom: 2px solid black;
+
+}
+.article-para{
+  text-align: justify;
 }
 
 #add-comment-form {
